# scaled_processing

./: Dockerfile.kafka-setup  README.md  check_duplicates.py  debug_collection.py  docker-compose.yml  fixed_docling_demo.py  main.py  output_markdown.md  pyproject.toml  pytest.ini  run_api_server.py  steel_thread_test.py  test_data_model_integration.py  test_docling_pipeline.py  test_document.txt  test_duplicate_logic.py  test_phase1_integration.py  test_prefect_pipeline.py  test_rag_flow.py  test_vision_integration.py  test_weaviate_connection.py  test_weaviate_ingestion.py
.claude/: settings.local.json
advanced_docling_results/: advanced_features_detailed.json  navigation_map.json  semantic_blocks.json  topic_groups.json
data/documents/raw/: Monthly-Report-Aug.docx  test_document.txt
data/rag/chunks/: chunks_Hamza_CV_Updated_20250904_200806.json  chunks_L40S-GPU-Stress-Test-Results_20250902_204352.json  chunks_Monthly-Report-Aug_20250902_203322.json  chunks_chonkie_doc.json  chunks_doc_20250901_170925_f603b802_20250901_173531.json  chunks_doc_20250901_185340_9b8f4443_20250901_185446.json  chunks_doc_20250901_185343_f603b802_20250901_185415.json  chunks_doc_20250901_185432_0309694f_20250901_185546.json  chunks_doc_20250901_185519_0ec59f16_20250901_185601.json  chunks_doc_20250902_183110_d10fed1f_20250902_183139.json  chunks_simplified_test_001_20250901_100108.json  chunks_test_convenience_001_20250901_123102.json  chunks_test_convenience_001_20250901_123218.json  chunks_test_convenience_001_20250901_123355.json  chunks_test_doc_001_20250901_103141.json  chunks_test_document_001_20250901_095730.json  chunks_test_flow_doc_001_20250901_120002.json  chunks_test_flow_doc_001_20250901_120211.json  chunks_test_flow_doc_001_20250901_120346.json  chunks_test_flow_doc_001_20250901_120602.json  chunks_test_flow_doc_001_20250901_122528.json  chunks_test_flow_doc_001_20250901_123016.json  chunks_test_flow_doc_001_20250901_123132.json  chunks_test_flow_doc_001_20250901_123328.json
data/rag/embeddings/: embeddings_Hamza_CV_Updated.json  embeddings_Monthly-Report-Aug.json  embeddings_doc_20250901_170925_f603b802_20250901_173545.json  embeddings_doc_20250901_185340_9b8f4443_20250901_185454.json  embeddings_doc_20250901_185343_f603b802_20250901_185421.json  embeddings_doc_20250901_185519_0ec59f16_20250901_185607.json  embeddings_doc_20250902_183110_d10fed1f_20250902_183146.json  embeddings_simplified_test_001_20250901_100845.json  embeddings_test_convenience_001_20250901_123105.json  embeddings_test_convenience_001_20250901_123222.json  embeddings_test_convenience_001_20250901_123403.json  embeddings_test_doc_001_20250901_103146.json  embeddings_test_flow_doc_001_20250901_123051.json  embeddings_test_flow_doc_001_20250901_123207.json  embeddings_test_flow_doc_001_20250901_123336.json
docker/: Dockerfile.kafka-setup  Dockerfile.postgres-setup
docs/: architecture_roadmap.md  class.puml  component.puml  phases.md
docs/architecture_diagrams/: layer_simplification_explanation.md  messaging_reorganization_summary.md  simplified_event_driven_architecture.puml
docs/data_flow/: README.md  dataflow_architecture.puml  document_upload_dataflow.puml  query_processing_dataflow.puml  rag_workflow_dataflow.puml  structured_extraction_dataflow.puml
docs/kafka/: kafka_architecture.puml  organized_messaging_architecture.puml
docs/migration_chonkie/: Migration_plan.md
docs/phases/: REFACTORING_PLAN.md  chromadb_segmentation_fault_fix.md  chromadb_single_collection_and_filename_fixes.md  chromadb_to_weaviate_migration_plan.md  design_decisions.md  implementation_guide.md  messaging_system_implementation.md  migration_debugging.md  phase1_weaviate_components_complete.md  phase_1_two_stage_chunking_complete.md  sprint1_kafka_setup.md  sprint_0_foundation.md  system_progress_summary.md  tasks_message_mapping.md  weaviate_migration_completion_summary.md
docs/workflows/: vector_storage_task_sequence.md  vector_storage_task_sequence.puml  weaviate_architecture.puml  weaviate_critical_methods.md  workflow_file_detection_to_processing.puml  workflow_upload_processing.puml
src/backend/: __init__.py
tests/unit/: test_weaviate_ingestion_engine.py  test_weaviate_manager.py
(+267 files in other folders)
